# openMVG

src/software/SfM/: CMakeLists.txt  SfM_AutomaticGlobalPipelinePMVS.py.in  SfM_AutomaticSequentialPipelinePMVS.py.in
src/software/ui/SfM/: CMakeLists.txt
src/software/ui/SfM/control_points_registration_with_chessboard/: AutomaticRegistration.cpp  AutomaticRegistration.hpp  CMakeLists.txt  main.cpp
